syntax = "proto2";

import "common.proto";

package udfs.proto;

service ClientProtocol {
    rpc nodes_report(EmptyMessage) returns (DataNodeInfoResponse);
    rpc mkdir(MkdirRequest) returns (EmptyMessage);
    rpc ls(LsRequest) returns (LsResponse);
    rpc open_file(OpenFileRequest) returns (OpenFileResponse);
    rpc start_file_create(CreateFileRequest) returns (BlockWithTargets);
    rpc finish_file_create(CreateFileRequest) returns (EmptyMessage);
    rpc abort_file_create(CreateFileRequest) returns (EmptyMessage);
    rpc add_block(AddBlockRequest) returns (BlockWithTargets);
    rpc abort_block_write(AbortBlockWriteRequest) returns (EmptyMessage);
}

message DataNodeInfoResponse {
    repeated DataNodeInfo datanodes = 1;
}

message OpenFileRequest {
    required string path = 1;
}

message OpenFileResponse {
    repeated BlockWithLocations blocks = 1;
}

message BlockWithLocations {
    required Block block = 1;
    repeated string locations = 2;
}

message MkdirRequest {
    required string path = 1;
}

message LsRequest {
    required string path = 1;
}

message LsResponse {
    repeated string files = 1;
}

message CreateFileRequest {
    required string path = 1;
}

message BlockWithTargets {
    required Block block = 1;
    repeated DataNodeInfo targets = 2;
}

message AddBlockRequest {
    required string path = 1;
}

message AbortBlockWriteRequest {
    required Block block = 1;
    required string path = 2;
}

